# zimuzo

./: README.md
.github/workflows/: backend-ci.yml  ci.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_19_1813-9b6795d2611a_create_user_and_apikey.py  2025_10_22_2206-bd79bd671ea9_first_migration.py  2025_11_07_1849-873ccb2cdf64_add_inbox_thread_message_draft_tag_and_.py  2025_11_09_1649-91dc1efc8a8b_update_user_thread_and_message.py  2025_11_11_0953-abe7077f90f9_update_inbox_and_tag.py
backend/app/: cli.py  contants.py  main.py  wait-for-it.sh
backend/app/config/: auth.py  config.py
backend/app/core/: auth.py  config.py  events.py  models.py  schemas.py  security.py
backend/app/database/: db.py
backend/app/models/: models.py
backend/app/routes/v1/: attachment.py  draft.py  inbound_resend.py  inbox.py  message.py  parse.py  routes.py  tag.py  thread.py  users.py  webhooks.py
backend/app/schemas/: schemas.py
backend/app/services/: email_parser.py  parse_content.py
backend/app/workers/: celery_app.py  tasks_email.py  tasks_webhooks.py
backend/tests/unit/: test_auth.py
backend/tools/: cli.py
email/backend/: .pre-commit-config.yaml  README.md  alembic.ini  start.sh
email/backend/alembic/versions/: 2025_12_06_1055-c098479d4f8e_initial_migration.py
email/backend/app/config/: auth.py  config.py
email/backend/app/core/: models.py  schemas.py
email/backend/app/database/: db.py
email/backend/app/routes/v1/: draft.py  message.py  webhooks.py
email/backend/app/services/: message_storage.py
email/backend/app/workers/: tasks_email.py
goverance/backend/: .dockerignore  .gitignore  pyproject.toml
governance/: README.md
