[project]
name = "backend"
version = "0.1.0"
description = "Backend service for AI agent email provider"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "fastapi==0.109.1",
    "mypy>=1.18.2",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "pydantic[email]==2.7.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.12.0,<0.23.0",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.26.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
