[project]
name = "backend"
version = "0.1.0"
description = "Backend service for AI agent email provider"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "celery[redis]>=5.5.3",
    "fastapi==0.109.1",
    "flower>=2.0.1",
    "mypy>=1.18.2",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.0.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "resend>=2.19.0",
    "sqlalchemy>=2.0.43",
    "svix>=1.15.0",
    "uvicorn[standard]>=0.12.0,<0.23.0",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.26.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
